--- a/index.html
+++ b/index.html
@@ -4,34 +4,16 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>SAT-DISCOVERY</title>
-    <link rel="stylesheet" href="/css/main.css">
-    <link rel="stylesheet" href="/css/header.css">
-    <link rel="stylesheet" href="/css/footer.css">
-    <style>
-        body {
-            background-color: #001f3f; /* Dark blue background */
-            color: #ffcc00; /* Yellow text */
-        }
-        a {
-            color: #ffcc00; /* Yellow links */
-        }
-    </style>
+    <link rel="stylesheet" href="style.css">
 </head>
 <body>
-    <header>
-        <h1>Welcome to SAT Discovery</h1>
-        <nav>
-            <ul>
-                <li><a href="app.html">App</a></li>
-                <!-- Add other navigation links here -->
-            </ul>
-        </nav>
-    </header>
-    <main>
-        <!-- Main content goes here -->
-    </main>
-    <footer>
-        <!-- Footer content goes here -->
-    </footer>
+    <div class="login-container">
+        <h1>SAT-DISCOVERY</h1>
+        <form action="/login" method="POST">
+            <input type="text" name="username" placeholder="Username" required>
+            <input type="password" name="password" placeholder="Password" required>
+            <button type="submit">Login</button>
+        </form>
+    </div>
 </body>
 </html>
